app/src/test/resources/programs/valid/variables/reassigningVariables.exe
foo main() -> Int = {
    let kInt: Int = 42;
    let kBool: Bool = true;
    let kNope: Nope = ();

    let mut x: Int = 3;
    let mut falsehood: Bool = false;
    let mut nope: Nope = ();

    x = kInt;
    falsehood = kBool;
    nope = kNope;
    0
}
