app/src/test/resources/programs/invalid/variables/badType.exe
foo main() -> Int = {
    let c: Bool = 0;
    let mut x: Int = ();
    x = true;
    0
}
